# hidapi-rs

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
etc/hidapi/hidapi/: hidapi.h
etc/hidapi/windows/: hid.c
examples/: co2mon.rs  dump_descriptors.rs  logitech_gprox.rs  lshid.rs  open_first_device.rs  readhid.rs  static_lifetime_bound.rs
src/: error.rs  ffi.rs  hidapi.rs  ioctl.rs  lib.rs  linux_native.rs  linux_udev.rs  macos.rs  windows.rs  windows_native.rs
src/hidapi/: macos.rs  windows.rs
src/linux_native/: ioctl.rs
src/windows_native/: descriptor.rs  dev_node.rs  device_info.rs  error.rs  hid.rs  interfaces.rs  mod.rs  string.rs  string_utils.rs  types.rs  utils.rs
src/windows_native/descriptor/: encoder.rs  mod.rs  tests.rs  typedefs.rs  types.rs
src/windows_native/types/: dev_node.rs  mod.rs  string.rs
tests/assets/: mouse1.data  mouse2.data
tests/pp_data/: 045E_02FF_0005_0001.pp_data  046A_0011_0006_0001.pp_data  046D_0A37_0001_000C.pp_data  046D_B010_0001_000C.pp_data  046D_B010_0002_0001.pp_data  046D_B010_0006_0001.pp_data  046D_C077_0002_0001.pp_data  046D_C283_0004_0001.pp_data  046D_C52F_0001_000C.pp_data  046D_C52F_0002_0001.pp_data  046D_C52F_0002_FF00.pp_data  046D_C534_0001_FF00.pp_data  046D_C534_0002_0001.pp_data  046D_C534_0006_0001.pp_data  046D_C534_0080_0001.pp_data  047F_C056_0001_000C.pp_data  047F_C056_0003_FFA0.pp_data  047F_C056_0005_000B.pp_data  17CC_1130_0000_FF01.pp_data
