[package]
name = "hidapi"
version = "2.4.1"
authors = [
    "Roland Ruckerbauer <roland.rucky@gmail.com>",
    "Osspial <osspial@gmail.com>",
    "Artyom Pavlov <newpavlov@gmail.com>",
    "mberndt123",
    "niklasad1",
    "Stefan Kerkmann"
]
repository = "https://github.com/ruabmbua/hidapi-rs"
description = "Rust-y wrapper around hidapi"
license = "MIT"
keywords = ["hid", "api", "usb", "binding", "wrapper"]
build = "build.rs"
links = "hidapi"
documentation = "https://docs.rs/hidapi"
edition = "2021"

[features]
default = ["linux-static-hidraw", "illumos-static-libusb"]
linux-static-libusb = []
linux-static-hidraw = []
linux-shared-libusb = []
linux-shared-hidraw = []
linux-native = ["dep:udev", "dep:nix"]
illumos-static-libusb = []
illumos-shared-libusb = []
macos-shared-device = []

[dependencies]
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
udev = { version = "0.7", optional = true }
nix = { version = "0.26", optional = true }

[target.'cfg(windows)'.dependencies]
winapi = "0.3.9"

[build-dependencies]
cc = "1.0"
pkg-config = "0.3"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
