[package]
name = "hidapi"
version = "2.6.1"
authors = [
    "Roland Ruckerbauer <mail@ruabmbua.dev>",
    "Osspial <osspial@gmail.com>",
    "Artyom Pavlov <newpavlov@gmail.com>",
    "mberndt123",
    "niklasad1",
    "Stefan Kerkmann"
]
repository = "https://github.com/ruabmbua/hidapi-rs"
description = "Rust-y wrapper around hidapi"
license = "MIT"
keywords = ["hid", "api", "usb", "binding", "wrapper"]
build = "build.rs"
links = "hidapi"
documentation = "https://docs.rs/hidapi"
edition = "2021"
include = [
    "README.md",
    "LICENSE.txt",
    "build.rs",
    "/src",
    "/etc/hidapi/CMakeLists.txt",
    "/etc/hidapi/LICENSE*",
    "/etc/hidapi/VERSION",
    "/etc/hidapi/hidapi",
    "/etc/hidapi/libusb",
    "/etc/hidapi/src",
    "/etc/hidapi/udev",
    # Platform support files
    "/etc/hidapi/linux/CMakeLists.txt",
    "/etc/hidapi/linux/*.c",
    "/etc/hidapi/linux/*.h",
    "/etc/hidapi/mac/CMakeLists.txt",
    "/etc/hidapi/mac/*.c",
    "/etc/hidapi/mac/*.h",
    "/etc/hidapi/windows/CMakeLists.txt",
    "/etc/hidapi/windows/*.c",
    "/etc/hidapi/windows/*.h",
]

[features]
default = ["linux-static-hidraw", "illumos-static-libusb"]
linux-static-libusb = []
linux-static-hidraw = []
linux-shared-libusb = []
linux-shared-hidraw = []
linux-native = ["dep:udev", "dep:nix"]
illumos-static-libusb = []
illumos-shared-libusb = []
macos-shared-device = []
windows-native = [
    "windows-sys/Win32_Devices_DeviceAndDriverInstallation",
    "windows-sys/Win32_Devices_HumanInterfaceDevice",
    "windows-sys/Win32_Devices_Properties",
    "windows-sys/Win32_Security",
    "windows-sys/Win32_Storage_EnhancedStorage",
    "windows-sys/Win32_Storage_FileSystem",
    "windows-sys/Win32_System_IO",
    "windows-sys/Win32_System_Threading",
    "windows-sys/Win32_UI_Shell_PropertiesSystem"
]

[dependencies]
libc = "0.2"
cfg-if = "1"

[target.'cfg(target_os = "linux")'.dependencies]
udev = { version = "0.8", optional = true }
nix = { version = "0.27", optional = true, features = ["fs", "ioctl", "poll"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.48", features = ["Win32_Foundation"] }

[build-dependencies]
cc = "1.0"
pkg-config = "0.3"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
